adding sorting and filtering features to the app

--- a/src/index.css
+++ b/src/index.css
@@ -123,3 +123,14 @@ footer {
 .button.primary {
   background-color: #ffc000;
 }
+.filter {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: 1rem;
+  border-bottom: 0.1rem #c0c0c0 solid;
+}
+
+.filter div {
+  flex: 1;
+}
