--- a/src/index.css
+++ b/src/index.css
@@ -177,3 +177,23 @@ footer {
 .total > button {
   flex: 1;
 }
+
+/*  CHECKOUT FORM*****/
+form {
+  width: 90%;
+}
+.form-container {
+  width: 100%;
+  padding: 0;
+  list-style-type: none;
+}
+
+.form-container li {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+input {
+  padding: 1rem;
+  border: 0.1rem #c0c0c0 solid;
+}
